force-app/main/default/objects/Exception_Log__c/fields/Class_Reference__c.field-meta.xml
<CustomField>
    <fullName>Class_Reference__c</fullName>
    <description>Stores the class &amp; method name where the error occured</description>
    <label>Class Reference</label>
    <type>TextArea</type>
</CustomField>