force-app/main/default/objects/Exception_Log__c/fields/Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Name__c</fullName>
    <description>Add Flow API name/ label</description>
    <label>Flow Name</label>
    <type>TextArea</type>
</CustomField>