force-app/main/default/objects/Exception_Log__c/fields/Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_ID__c</fullName>
    <description>Stores the ID of the record which throws the error</description>
    <label>Record ID</label>
    <type>TextArea</type>
</CustomField>